src/snapshots/tests__lex_example.snap
---
source: src/lexical.rs
expression: res
---
[
    EnrichedToken {
        inner: Punctuation(
            BracketOpen,
        ),
        line_no: 0,
    },
    EnrichedToken {
        inner: Identifier(
            "x",
        ),
        line_no: 0,
    },
    EnrichedToken {
        inner: Operator(
            LesserOrEquals,
        ),
        line_no: 0,
    },
    EnrichedToken {
        inner: Operator(
            GreaterThan,
        ),
        line_no: 0,
    },
    EnrichedToken {
        inner: Operator(
            GreaterOrEquals,
        ),
        line_no: 0,
    },
    EnrichedToken {
        inner: Operator(
            LesserThan,
        ),
        line_no: 0,
    },
    EnrichedToken {
        inner: Identifier(
            "y",
        ),
        line_no: 0,
    },
    EnrichedToken {
        inner: Literal(
            Integer(
                99,
            ),
        ),
        line_no: 0,
    },
    EnrichedToken {
        inner: Error(
            UnknownChar(
                '.',
            ),
        ),
        line_no: 0,
    },
    EnrichedToken {
        inner: Literal(
            Integer(
                88,
            ),
        ),
        line_no: 0,
    },
    EnrichedToken {
        inner: Identifier(
            "l8",
        ),
        line_no: 0,
    },
    EnrichedToken {
        inner: Punctuation(
            BracketClose,
        ),
        line_no: 0,
    },
]
