src/snapshots/tests__parse_condition.snap
---
source: src/parser.rs
expression: parsed
---
Ok(
    Program {
        id: Identifier(
            "x",
        ),
        compound: Compound {
            statements: [
                While(
                    While {
                        condition: Expr {
                            head: Term {
                                head: Factor {
                                    head: Product {
                                        head: Unit(
                                            Identifier(
                                                Identifier(
                                                    "c",
                                                ),
                                            ),
                                        ),
                                        tail: None,
                                    },
                                    tail: None,
                                },
                                tail: Some(
                                    TermPrime {
                                        op: LesserThan,
                                        rhs: Factor {
                                            head: Product {
                                                head: Unit(
                                                    Identifier(
                                                        Identifier(
                                                            "n",
                                                        ),
                                                    ),
                                                ),
                                                tail: None,
                                            },
                                            tail: None,
                                        },
                                        tail: None,
                                    },
                                ),
                            },
                            tail: None,
                        },
                        compound: Compound {
                            statements: [
                                Assign(
                                    Assign {
                                        id: Identifier(
                                            "c",
                                        ),
                                        expr: Expr {
                                            head: Term {
                                                head: Factor {
                                                    head: Product {
                                                        head: Unit(
                                                            Identifier(
                                                                Identifier(
                                                                    "c",
                                                                ),
                                                            ),
                                                        ),
                                                        tail: None,
                                                    },
                                                    tail: Some(
                                                        FactorPrime {
                                                            op: Plus,
                                                            rhs: Product {
                                                                head: Unit(
                                                                    Int(
                                                                        1,
                                                                    ),
                                                                ),
                                                                tail: None,
                                                            },
                                                            tail: None,
                                                        },
                                                    ),
                                                },
                                                tail: None,
                                            },
                                            tail: None,
                                        },
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ],
        },
    },
)
