src/snapshots/tests__parse_condition_nested.snap
---
source: src/parser.rs
expression: parsed
---
Err(
    ExpectedFound(
        Punctuation(
            BracketClose,
        ),
        EnrichedToken {
            inner: Operator(
                LesserThan,
            ),
            line_no: 3,
        },
    ),
)
