src/snapshots/tests__parse_empty.snap
---
source: src/parser.rs
expression: parsed
---
Err(
    ExpectedButFoundEOF(
        Keyword(
            Program,
        ),
    ),
)
