src/snapshots/tests__parse_full.snap
---
source: src/parser.rs
expression: parsed
---
Ok(
    Program {
        id: Identifier(
            "fib",
        ),
        compound: Compound {
            statements: [
                Decl(
                    Decl {
                        id: Identifier(
                            "n",
                        ),
                        expr: None,
                    },
                ),
                Decl(
                    Decl {
                        id: Identifier(
                            "first",
                        ),
                        expr: Some(
                            Expr {
                                head: Unit(
                                    Int(
                                        0,
                                    ),
                                ),
                                tail: None,
                            },
                        ),
                    },
                ),
                Decl(
                    Decl {
                        id: Identifier(
                            "second",
                        ),
                        expr: Some(
                            Expr {
                                head: Unit(
                                    Int(
                                        1,
                                    ),
                                ),
                                tail: None,
                            },
                        ),
                    },
                ),
                Decl(
                    Decl {
                        id: Identifier(
                            "next",
                        ),
                        expr: None,
                    },
                ),
                Decl(
                    Decl {
                        id: Identifier(
                            "c",
                        ),
                        expr: Some(
                            Expr {
                                head: Unit(
                                    Int(
                                        0,
                                    ),
                                ),
                                tail: None,
                            },
                        ),
                    },
                ),
                Print(
                    Print(
                        Expr {
                            head: Unit(
                                String(
                                    "enter the number of terms",
                                ),
                            ),
                            tail: None,
                        },
                    ),
                ),
                Print(
                    Get(
                        Identifier(
                            "n",
                        ),
                    ),
                ),
                While(
                    While {
                        condition: Bool {
                            head: RelationalOperation(
                                RelationalOperation {
                                    head: Unit(
                                        Identifier(
                                            Identifier(
                                                "c",
                                            ),
                                        ),
                                    ),
                                    tail: RelationalOperationTail {
                                        opt_lhs_tail: None,
                                        operator: LesserThan,
                                        rhs: Expr {
                                            head: Unit(
                                                Identifier(
                                                    Identifier(
                                                        "n",
                                                    ),
                                                ),
                                            ),
                                            tail: None,
                                        },
                                    },
                                },
                            ),
                            tail: None,
                        },
                        compound: Compound {
                            statements: [
                                If(
                                    If {
                                        condition: Bool {
                                            head: RelationalOperation(
                                                RelationalOperation {
                                                    head: Unit(
                                                        Identifier(
                                                            Identifier(
                                                                "c",
                                                            ),
                                                        ),
                                                    ),
                                                    tail: RelationalOperationTail {
                                                        opt_lhs_tail: None,
                                                        operator: LesserOrEquals,
                                                        rhs: Expr {
                                                            head: Unit(
                                                                Int(
                                                                    1,
                                                                ),
                                                            ),
                                                            tail: None,
                                                        },
                                                    },
                                                },
                                            ),
                                            tail: None,
                                        },
                                        if_branch: Compound {
                                            statements: [
                                                Assign(
                                                    Assign {
                                                        id: Identifier(
                                                            "next",
                                                        ),
                                                        expr: Expr {
                                                            head: Unit(
                                                                Identifier(
                                                                    Identifier(
                                                                        "c",
                                                                    ),
                                                                ),
                                                            ),
                                                            tail: None,
                                                        },
                                                    },
                                                ),
                                            ],
                                        },
                                        else_branch: Some(
                                            Compound {
                                                statements: [
                                                    Assign(
                                                        Assign {
                                                            id: Identifier(
                                                                "next",
                                                            ),
                                                            expr: Expr {
                                                                head: Unit(
                                                                    Identifier(
                                                                        Identifier(
                                                                            "first",
                                                                        ),
                                                                    ),
                                                                ),
                                                                tail: Some(
                                                                    ExprPrime {
                                                                        operator: Plus,
                                                                        operand: Expr {
                                                                            head: Unit(
                                                                                Identifier(
                                                                                    Identifier(
                                                                                        "second",
                                                                                    ),
                                                                                ),
                                                                            ),
                                                                            tail: None,
                                                                        },
                                                                        tail: None,
                                                                    },
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                    Assign(
                                                        Assign {
                                                            id: Identifier(
                                                                "second",
                                                            ),
                                                            expr: Expr {
                                                                head: Unit(
                                                                    Identifier(
                                                                        Identifier(
                                                                            "next",
                                                                        ),
                                                                    ),
                                                                ),
                                                                tail: None,
                                                            },
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                    },
                                ),
                                Print(
                                    Print(
                                        Expr {
                                            head: Unit(
                                                Identifier(
                                                    Identifier(
                                                        "next",
                                                    ),
                                                ),
                                            ),
                                            tail: None,
                                        },
                                    ),
                                ),
                                Assign(
                                    Assign {
                                        id: Identifier(
                                            "c",
                                        ),
                                        expr: Expr {
                                            head: Unit(
                                                Identifier(
                                                    Identifier(
                                                        "c",
                                                    ),
                                                ),
                                            ),
                                            tail: Some(
                                                ExprPrime {
                                                    operator: Plus,
                                                    operand: Expr {
                                                        head: Unit(
                                                            Int(
                                                                1,
                                                            ),
                                                        ),
                                                        tail: None,
                                                    },
                                                    tail: None,
                                                },
                                            ),
                                        },
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ],
        },
    },
)
