src/snapshots/tests__parse_fun_call.snap
---
source: src/parser.rs
expression: parsed
---
Node {
    ty: Program,
    text_range: 9..61,
    children: [
        Node {
            ty: Identifier,
            text_range: 17..18,
            children: [],
        },
        Node {
            ty: Compound,
            text_range: 27..61,
            children: [
                Node {
                    ty: FunctionCall,
                    text_range: 45..49,
                    children: [
                        Node {
                            ty: Identifier,
                            text_range: 45..46,
                            children: [],
                        },
                    ],
                },
            ],
        },
    ],
}
