src/snapshots/tests__parse_function_mult_arg.snap
---
source: src/parser.rs
expression: parsed
---
Ok(
    Program {
        id: Identifier(
            "fib",
        ),
        compound: Compound {
            statements: [
                FunctionDecl(
                    FunctionDecl {
                        id: Identifier(
                            "sum",
                        ),
                        args: [
                            Identifier(
                                "x",
                            ),
                            Identifier(
                                "y",
                            ),
                        ],
                        inner: Compound {
                            statements: [
                                Return(
                                    Return {
                                        expr: Expr {
                                            head: Term {
                                                head: Factor {
                                                    head: Product {
                                                        head: Unit(
                                                            Identifier(
                                                                Identifier(
                                                                    "x",
                                                                ),
                                                            ),
                                                        ),
                                                        tail: None,
                                                    },
                                                    tail: Some(
                                                        FactorPrime {
                                                            op: Plus,
                                                            rhs: Product {
                                                                head: Unit(
                                                                    Identifier(
                                                                        Identifier(
                                                                            "y",
                                                                        ),
                                                                    ),
                                                                ),
                                                                tail: None,
                                                            },
                                                            tail: None,
                                                        },
                                                    ),
                                                },
                                                tail: None,
                                            },
                                            tail: None,
                                        },
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ],
        },
    },
)
